# CPU-Ray-tracer

./: .gitignore  .gitmodules  AABB.h  AArect.h  App.cpp  BVH_node.h  Bucket.h  CMakeLists.txt  CN_stb_image.h  Camera.h  Color.h  Hittable.h  Hittable_list.h  Material.h  Perlin.h  README.md  Ray.h  Sphere.h  Sphere_moving.h  Texture.h  Thread_manager.h  Utility_functions.h  Vec.h  World.h  app.cpp  hittable.h  main.cpp  sphere.h  test.cpp  workspace.code-workspace
src/: App.cpp  Bucket.h  CMakeLists.txt  Color.h  File_read.h  GLFW_window_set.h  GL_error_handler.h  GL_index_buffer.h  GL_renderer.h  GL_shader.h  GL_texture.h  GL_vertex_array.h  GL_vertex_buffer.h  GL_vertex_buffer_layout.h  Material.h  Ray.h  Test.cpp  Texture.h  Thread_manager.h  Utility_functions.h  Vec.h  World.h  r_stb_image.h  test.cpp
src/Shaders/: fragmentShader.shader  fragmentShader.txt  vertexShader.shader
src/Textures/: RTout.ppm  RTout0.ppm  RTout1.ppm  RTout2.ppm  RTout3.ppm  RTout4.ppm  RTout5.ppm  RTout6.ppm
src/backend/: AArect.h  Bucket.h  Camera.h  Color.h  File_read.h  File_write.h  Hittable.h  Hittable_list.h  Log.h  Material.h  Obj.h  Perlin.h  RT_stb_image.h  RT_tiny_obj_loader.h  Render.h  Settings.h  Sphere.h  Sphere_moving.h  Texture.h  Thread_manager.h  Vec.h  World.h
src/models/: README.md
src/myEmbree/: Embree_set.h  Embree_setup.h
src/myGL/: GLFW_window_set.h  GL_error_handler.h  GL_index_buffer.h  GL_renderer.h  GL_shader.h  GL_texture.h  GL_vertex_array.h  GL_vertex_buffer.h  GL_vertex_buffer_layout.h
src/myGlfw/: Glfw_controls.h
src/myImGui/: Imgui_controls.h
src/shaders/: fragmentShader.shader
src/tests/: GLFW_window_set_test.h  Test.h  TestClearColor.h  TestTexture2D.h
